# deadbeef

./: .gitignore  Android.mk  README  common.h  conf.c  deadbeef.h  main.c  moduleconf-android.h  pack-freeplugins.sh  playlist.c  plugins.c  streamer.c  streamer.h  threading_pthread.c
android/: .classpath  .project  AndroidManifest.xml  AndroidManifest.xml.in  Application.mk  build.properties  build.xml  config-android.h  default.properties  proguard.cfg
android-assets/: blank-cd.xcf  ddb-gui-proto.xcf  folder.xcf  nes.xcf  sid.xcf  widget.xcf  widget_bg.xcf
android.common/: .classpath  .project  AndroidManifest.xml  default.properties
android.common/jni/: Makefile  deadbeef-jni.c  deadbeef-jni.h  equalizer.h  flac  parse_stack.py
android.freeplugins/: .project  AndroidManifest.xml
android.freeplugins/jni/: Android.mk  Makefile  aac  adplug  ffap  gme  m3u  sid  sndfile
android/assets/: shuffle.xcf
android/jni/: Android.mk  Application.mk  Makefile  asm.S  deadbeef-jni.c  deadbeef-jni.h  dumb  eq.S  equalizer.c  equalizer.h  genasm.sh  moduleconf-android.h  mpgmad  musepack  org_deadbeef_android_DeadbeefAPI.h  stackdump.sh  supereq  tta  vfs_curl  vfs_zip  vorbis  vtx  wavpack
android/tools/: ddb_preprocess
plugins/aac/: Android.mk  Makefile.am  aac.c  aac_parser.c  aac_parser.h
plugins/aac/mp4ff/: mp4ff.c
plugins/adplug/: Android.mk  adplug-db.cpp
plugins/alsa/: Makefile.am  alsa.c
plugins/dumb/: Android.mk  cdumb.c
plugins/ffap/: Android.mk  ffap.c
plugins/flac/: Android.mk  flac.c
plugins/gme/: Android.mk  (+1 more)
plugins/mpgmad/: Android.mk  Makefile.am  mpgmad.c
po/: deadbeef.pot
(+197 files in other folders)
